--- a/store.plist
+++ b/store.plist
@@ -19,7 +19,7 @@
 					<key>needs-shine</key>
 					<false/>
 					<key>url</key>
-					<string>http://www.zoz.cc/download/store_app_logo.png</string>
+					<string>http://www.zoz.cc/download/store.png</string>
 				</dict>
 			</array>
 			<key>metadata</key>
