--- a/store.plist
+++ b/store.plist
@@ -27,13 +27,13 @@
 				<key>kind</key>
 				<string>software</string>
 				<key>bundle-identifier</key>
-				<string>io.dcloud.HelloMUI</string>
+				<string>io.dcloud.H5503CD48</string>
 				<key>title</key>
-				<string>门店管理</string>
+				<string>闂ㄥ簵绠＄悊</string>
 				<key>bundle-version</key>
 				<string>1.0.0</string>
 				<key>subtitle</key>
-				<string>门店管理</string>
+				<string>闂ㄥ簵绠＄悊</string>
 			</dict>
 		</dict>
 	</array>
